@@ -1,0 +1,4 @@
+3
+foo/aA
+bar/b
+baz/B
