@@ -1,0 +1,6 @@
+3
+foo
+bar
+free
+scott
+scot-free
