@@ -1,4 +1,4 @@
-3
+4
 foo/W
 word/W
 bar/WS
